--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,106 @@
+alembic==1.14.0
+arrow==1.3.0
+attrs==24.2.0
 Authlib==1.3.2
-Flask-Assets==2.0
-Flask-Login==0.6.2
-Flask-Mail==0.10.0
-Flask-Migrate==2.5.3
-Flask-SQLAlchemy==2.5.1
-Flask-SSLify==0.1.5
-Flask-SeaSurf==1.1.1
-Flask-Session==0.6.0
-Flask==2.2.5
-Jinja2==3.1.4
-PyYAML==6.0.1
-SQLAlchemy==1.4.51
-#alembic==1.9.0
 bcrypt==4.1.2
+blinker==1.9.0
+boolean.py==4.0
 bravado-core==5.17.1
-certifi==2023.11.17
+CacheControl==0.14.1
+cachelib==0.13.0
+captcha==0.6.0
+certifi==2024.8.30
 cffi==1.15.1
-configobj==5.0.8
+charset-normalizer==3.4.0
+click==8.1.7
+configobj==5.0.9
 cryptography==43.0.1
 cssmin==0.2.0
-dnspython>=2.3.0
-flask_session_captcha==1.3.0
-gunicorn==20.1.0
+cyclonedx-python-lib==7.6.2
+defusedxml==0.7.1
+dnspython==2.7.0
+filelock==3.16.1
+Flask==2.2.5
+Flask-Assets==2.0
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.0.7
+Flask-SeaSurf==2.0.0
+Flask-Session==0.6.0
+flask-session-captcha==1.3.0
+Flask-SQLAlchemy==2.5.1
+flask-talisman==1.1.0
+fqdn==1.5.1
+greenlet==3.1.1
+gunicorn==23.0.0
+html5lib==1.1
+idna==3.10
+importlib_resources==6.4.5
+iniconfig==2.0.0
+isodate==0.7.2
+isoduration==20.11.0
 itsdangerous==2.1.2
-jsonschema[format]>=2.5.1,<5.0.0 # until https://github.com/Yelp/bravado-core/pull/385
+Jinja2==3.1.4
+jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+license-expression==30.4.0
 lima==0.5
---use-feature=no-binary-enable-wheel-cache lxml==4.9.0
+lxml==5.3.0
+Mako==1.3.6
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+msgpack==1.1.0
 mysqlclient==2.2.1
+packageurl-python==0.16.0
+packaging==24.2
 passlib==1.7.4
-#pyOpenSSL==22.1.0
+pillow==11.0.0
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.7.3
+pluggy==1.5.0
+psycopg2==2.9.5
+py-serializable==1.1.2
 pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+Pygments==2.18.0
 pyotp==2.8.0
+pyparsing==3.2.0
 pytest==7.4.4
+python-dateutil==2.9.0.post0
 python-ldap==3.4.3
 python3-saml==1.15.0
 pytimeparse==1.1.8
 pytz==2022.7.1
+PyYAML==6.0.1
 qrcode==7.3.1
-requests==2.31.0
-rjsmin==1.2.1
-webcolors==1.12
-werkzeug==3.0.6
-zipp==3.11.0
 rcssmin==1.1.1
+referencing==0.35.1
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3987==1.3.8
+rich==13.9.4
+rjsmin==1.2.1
+rpds-py==0.21.0
+setuptools==75.5.0
+simplejson==3.19.3
+six==1.16.0
+sortedcontainers==2.4.0
+SQLAlchemy==1.4.51
+swagger-spec-validator==3.0.4
+toml==0.10.2
+types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
+uri-template==1.3.0
+urllib3==2.2.3
+webassets==2.0
+webcolors==1.12
+webencodings==0.5.1
+Werkzeug==3.0.6
+xmlsec==1.3.14
+zipp==3.11.0
 zxcvbn==4.4.28
-psycopg2==2.9.5
-setuptools==65.5.1 # fixes CVE-2022-40897
